--- a/archapp/ArchApp/app/src/main/AndroidManifest.xml
+++ b/archapp/ArchApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.geekbranins.arch.homework">
+    package="ru.geekbrains.arch.homework">
 
     <application
         android:allowBackup="true"
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ArchApp"
-        android:name=".HomeWorkApplication">
-        <activity android:name=".ui.main.MainActivity">
+        android:name="ru.geekbrains.arch.homework.HomeWorkApplication">
+        <activity android:name="ru.geekbrains.arch.homework.ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
