--- a/archapp/ArchApp/app/build.gradle
+++ b/archapp/ArchApp/app/build.gradle
@@ -25,6 +25,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -46,6 +47,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
     implementation 'androidx.preference:preference-ktx:1.1.1'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
     testImplementation 'junit:junit:4.13.1'
